...
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="48dp"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/edit_mode_page_strip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:gravity="center_vertical" />
        </HorizontalScrollView>
...
