...
            android:hint="@string/drawer_search_hint"
            android:inputType="text"
            android:imeOptions="actionSearch"
            android:maxLines="1" />

        <ImageButton
            android:id="@+id/drawer_more"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_more"
            android:contentDescription="@string/action_more" />
    </LinearLayout>
...
